--- a/requirements.txt
+++ b/requirements.txt
@@ -4,20 +4,25 @@ charset-normalizer==3.1.0
 click==8.1.3
 click-plugins==1.1.1
 cligj==0.7.2
+exceptiongroup==1.1.1
 Fiona==1.9.3
 geopandas==0.12.2
 idna==3.4
 importlib-metadata==6.6.0
+iniconfig==2.0.0
 munch==2.5.0
 numpy==1.24.3
 packaging==23.1
 pandas==2.0.1
+pluggy==1.0.0
 pyproj==3.5.0
+pytest==7.3.1
 python-dateutil==2.8.2
 pytz==2023.3
 requests==2.28.2
 shapely==2.0.1
 six==1.16.0
+tomli==2.0.1
 tzdata==2023.3
 urllib3==1.26.15
 zipp==3.15.0
