--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ click-plugins==1.1.1
 cligj==0.7.2
 exceptiongroup==1.1.1
 Fiona==1.9.3
-geopandas==0.12.2
+geopandas==0.10.2; python_version < '3.8'
+geopandas==0.12.2; python_version >= '3.8'
 idna==3.4
 importlib-metadata==6.6.0
 iniconfig==2.0.0
