--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,8 @@ packaging==23.1
 pandas==1.3.5; python_version == '3.7'
 pandas==2.0.1; python_version >= '3.8'
 pluggy==1.0.0
-pyproj==3.5.0
+pyproj==3.2.1; python_version == '3.7'
+pyproj==3.5.0; python_version >= '3.8'
 pytest==7.3.1
 python-dateutil==2.8.2
 pytz==2023.3
