--- a/.github/workflows/github-actions-ci.yaml
+++ b/.github/workflows/github-actions-ci.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -28,7 +28,8 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Set up credentials
+    - name: Set up credentials (Linux and MacOS)
+      if: ${{ matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest' }}
       env:
         USERNAME: ${{ secrets.REASK_API_USERNAME }}
         PASSWORD: ${{ secrets.REASK_API_PASSWORD }}
@@ -37,6 +38,16 @@ jobs:
         echo "username = ${USERNAME}" >> ~/.reask
         echo "password = ${PASSWORD}" >> ~/.reask
         chmod 600 ~/.reask
+    
+    - name: Set up credentials (Windows)
+      if: ${{ matrix.os == 'windows-latest' }}
+      env:
+        USERNAME: ${{ secrets.REASK_API_USERNAME }}
+        PASSWORD: ${{ secrets.REASK_API_PASSWORD }}
+      run: |
+        echo "[default]" > %USERPROFILE%\.reask
+        echo username=%USERNAME% >> %USERPROFILE%\.reask
+        echo password=%PASSWORD% >> %USERPROFILE%\.reask
     
     - name: Run pytests
       run: |
