--- a/.github/workflows/github-actions-ci.yaml
+++ b/.github/workflows/github-actions-ci.yaml
@@ -16,6 +16,17 @@ jobs:
         os: [windows-latest]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
+    - name: Set up credentials
+      env:
+        USERNAME: ${{ secrets.REASK_API_USERNAME }}
+        PASSWORD: ${{ secrets.REASK_API_PASSWORD }}
+      run: |
+        echo $HOME
+        echo "[default]" > $HOME/.reask
+        echo "username = $USERNAME" >> $HOME/.reask
+        echo "password = $PASSWORD" >> $HOME/.reask
+        #chmod 600 $HOME/.reask
+
     steps:
     - name: Git checkout 
       uses: actions/checkout@v3
@@ -29,17 +40,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
-    - name: Set up credentials
-      env:
-        USERNAME: ${{ secrets.REASK_API_USERNAME }}
-        PASSWORD: ${{ secrets.REASK_API_PASSWORD }}
-      run: |
-        echo $HOME
-        echo "[default]" > $HOME/.reask
-        echo "username = ${USERNAME}" >> $HOME/.reask
-        echo "password = ${PASSWORD}" >> $HOME/.reask
-        chmod 600 ~/.reask
         
     - name: Run pytests
       run: |
