--- a/.github/workflows/github-actions-ci.yaml
+++ b/.github/workflows/github-actions-ci.yaml
@@ -55,3 +55,11 @@ jobs:
       run: |
         cd tests
         pytest -vs
+    
+    - name: Post notification to slack channel
+      id: slack
+      uses: slackapi/slack-github-action@v1.24.0
+      channel-id: '${{ secrets.SLACK_CHANNEL_ID }}'
+      slack-message: 'GitHub build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}'
+      env:
+        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
