--- a/.github/workflows/github-actions-ci-daily.yaml
+++ b/.github/workflows/github-actions-ci-daily.yaml
@@ -1,10 +1,9 @@
 name: CI - Integration Daily 
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+# Triggers the workflow on a daily schedule
 on:
   schedule:
-    - cron: '00 22 * * *'
+    - cron: '30 22 * * *'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
