--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ click-plugins==1.1.1
 cligj==0.7.2
 exceptiongroup==1.1.1
 Fiona==1.9.3
+geographiclib==2.0
 geopandas==0.10.2; python_version == '3.7'
 geopandas==0.12.2; python_version >= '3.8'
+geopy==2.4.0
 idna==3.4
 importlib-metadata==6.6.0
 iniconfig==2.0.0
