Add demo user credentials for limited region permission checks.

--- a/.github/workflows/github-actions-ci.yaml
+++ b/.github/workflows/github-actions-ci.yaml
@@ -26,11 +26,16 @@ jobs:
       env:
         USERNAME: ${{ secrets.REASK_API_USERNAME }}
         PASSWORD: ${{ secrets.REASK_API_PASSWORD }}
+        DEMO_USERNAME: ${{ secrets.REASK_DEMO_API_USERNAME }}
+        DEMO_PASSWORD: ${{ secrets.REASK_DEMO_API_PASSWORD }}
       run: |
         echo $HOME\.reask
         echo "[default]" > $HOME\.reask
         echo "username = $Env:USERNAME" >> $HOME\.reask
         echo "password = $Env:PASSWORD" >> $HOME\.reask
+        echo "[$Env:DEMO_USERNAME]" > $HOME\.reask
+        echo "username = $Env:DEMO_USERNAME" >> $HOME\.reask
+        echo "password = $Env:DEMO_PASSWORD" >> $HOME\.reask
         chmod 600 $HOME\.reask
     
     - name: Set up credentials (Linux and MacOS)
@@ -38,10 +43,15 @@ jobs:
       env:
         USERNAME: ${{ secrets.REASK_API_USERNAME }}
         PASSWORD: ${{ secrets.REASK_API_PASSWORD }}
+        DEMO_USERNAME: ${{ secrets.REASK_DEMO_API_USERNAME }}
+        DEMO_PASSWORD: ${{ secrets.REASK_DEMO_API_PASSWORD }}
       run: |
         echo "[default]" > ~/.reask
         echo "username = ${USERNAME}" >> ~/.reask
         echo "password = ${PASSWORD}" >> ~/.reask
+        echo "[${DEMO_USERNAME}]" > $HOME\.reask
+        echo "username = ${DEMO_USERNAME}" >> $HOME\.reask
+        echo "password = ${DEMO_PASSWORD}" >> $HOME\.reask
         chmod 600 ~/.reask
 
     - name: Git checkout 
