--- a/.github/workflows/github-actions-ci.yaml
+++ b/.github/workflows/github-actions-ci.yaml
@@ -18,6 +18,12 @@ jobs:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
         os: [ubuntu-latest, macos-latest, windows-latest]
+        exclude:  # Apple Silicon ARM64 does not support Python < v3.8
+          - python-version: "3.7"
+            os: macos-latest
+        include:  # So run those legacy versions on Intel CPUs
+          - python-version: "3.7"
+            os: macos-13
 
     steps:
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -35,9 +41,6 @@ jobs:
 
     - name: Set up credentials (Linux and MacOS)
       if: matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest'
-      exclude: # Apple Silicon ARM64 does not support Python < v3.8
-        - python-version: "3.7"
-          os: macos-latest
       env:
         USERNAME: ${{ secrets.REASK_API_USERNAME }}
         PASSWORD: ${{ secrets.REASK_API_PASSWORD }}
