--- a/.github/workflows/github-actions-ci.yaml
+++ b/.github/workflows/github-actions-ci.yaml
@@ -18,6 +18,9 @@ jobs:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
         os: [ubuntu-latest, macos-latest, windows-latest]
+        exclude:  # Apple Silicon ARM64 does not support Python < v3.8
+          - python-version: "3.7"
+            os: macos-latest
 
     steps:
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -51,7 +54,7 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-        
+
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
