--- a/.github/workflows/github-actions-ci.yaml
+++ b/.github/workflows/github-actions-ci.yaml
@@ -16,11 +16,8 @@ jobs:
     runs-on: ${{ matrix.os}}
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
         os: [ubuntu-latest, macos-latest, windows-latest]
-        exclude:  # Apple Silicon ARM64 does not support Python < v3.8
-          - python-version: "3.7"
-            os: macos-latest
 
     steps:
     # Steps represent a sequence of tasks that will be executed as part of the job
